--- a/practice3/.vscode/settings.json
+++ b/practice3/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\verte\\Anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\verte\\Anaconda3\\envs\\pratice3\\python.exe"
 }
